<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:id="@+id/rl_splash_ifma">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/logoifma"
                android:src="@drawable/ic_ifma"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:padding="-10dp"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/text_logo_ifma2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:textStyle="normal|bold"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@+id/imageView2"
                android:layout_toEndOf="@+id/imageView2"/>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_logo_ifma3"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:textStyle="normal|bold"
                android:layout_below="@+id/textView8"
                android:layout_toRightOf="@+id/imageView2"
                android:layout_toEndOf="@+id/imageView2"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/text_logo_ifma1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle="normal|bold"
                android:layout_above="@+id/textView8"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@+id/imageView2"
                android:layout_toEndOf="@+id/imageView2"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/rl_splash_ec"
            android:layout_weight="1"
            >


            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/imageView"
                android:layout_alignRight="@+id/imageView"
                android:layout_below="@+id/imageView"
                android:gravity="center"
                android:text="@string/text_logo_ec"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#212121"
                android:textSize="13sp"
                android:layout_alignLeft="@+id/imageView"
                android:layout_alignStart="@+id/imageView"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="80dp"
                android:layout_height="75dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/logoec"
                android:cropToPadding="true"
                android:src="@drawable/icon_ec"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/textView12"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:gravity="center_horizontal"
        android:textStyle="normal|bold"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary"/>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="190dp"
        android:id="@+id/progressBar"
        android:layout_above="@+id/textView12"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>