<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/links"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#212121"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <Button
                android:id="@+id/btn_ifmasite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/ifma"
                android:textColor="@android:color/white"
                android:textStyle="normal|bold"
                android:layout_below="@+id/textView13"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

            <Button
                android:id="@+id/btn_qacad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/btn_ifmasite"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignStart="@+id/btn_ifmasite"
                android:layout_centerVertical="true"
                android:layout_below="@+id/btn_ifmasite"
                android:layout_marginTop="20dp"
                android:background="@drawable/button"
                android:text="@string/sistema_acad"
                android:textColor="@android:color/white"
                android:textStyle="normal|bold"
                />

            <Button
                android:id="@+id/btn_biblioteca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/btn_qacad"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignStart="@+id/btn_qacad"
                android:layout_below="@+id/btn_qacad"
                android:layout_marginTop="20dp"
                android:background="@drawable/button"
                android:text="@string/biblioteca"
                android:textColor="@android:color/white"
                android:textStyle="normal|bold"
                />

            <Button
                android:id="@+id/btn_suap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/btn_biblioteca"
                android:layout_marginTop="20dp"
                android:background="@drawable/button"
                android:text="@string/suap"
                android:textColor="@android:color/white"
                android:textStyle="normal|bold"
                />




        </RelativeLayout>

    </LinearLayout>

</ScrollView>

